--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "baffle": "^0.3.6",
     "bootstrap": "^5.1.3",
+    "luxon": "^2.4.0",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
@@ -25,6 +26,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/axios": "^0.14.0",
     "@types/jquery": "^3.5.14",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
