--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "baffle": "^0.3.6",
     "bootstrap": "^5.1.3",
+    "idb": "^7.0.1",
     "luxon": "^2.4.0",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
