--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "vue-tsc --noEmit && vite build",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "dev": "vite",
+    "dev": "env-cmd -f dev.env vite",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit"
   },
@@ -15,6 +15,7 @@
     "baffle": "^0.3.6",
     "bootstrap": "^5.1.3",
     "comfy.js": "^1.1.15",
+    "env-cmd": "^10.1.0",
     "idb": "^7.0.1",
     "luxon": "^2.4.0",
     "mutationobserver-shim": "^0.3.7",
