--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "lib": [
+      "ES2021.String"
+    ]
   },
 
   "references": [
